# miqraa

./: .gitignore  DOC.md  INSTALL.md  LICENSE  NOTICE  README.md
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: 001_init.sql  002_enrollments.sql  003_sessions.sql  004_recitations_update.sql  005_riwaya.sql  006_expand_riwaya.sql  007_fix_cascades.sql  008_schedules.sql  009_recurrence.sql  010_enrollment_settings.sql  011_halaqah_session_system.sql  012_annotation_lifecycle.sql  013_qf_accounts.sql  014_user_role_pending.sql  015_qf_sync_tracking.sql  016_user_last_seen.sql  017_room_description_deadline.sql  018_recitations_order_plan_status.sql  RULE.md
backend/src/: main.rs  quran_ayah_counts.rs  riwaya.rs
backend/src/api/: extractors.rs  mod.rs  router.rs  types.rs
backend/src/api/handlers/: auth.rs  enrollments.rs  error_annotations.rs  error_annotations_db.rs  livekit.rs  mod.rs  qf.rs  recitations.rs  rooms.rs  schedules.rs  sessions.rs  users.rs
backend/src/api/ws/: messages.rs  mod.rs  signaling.rs
backend/src/auth/: jwt.rs  mod.rs  password.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/media/: config.rs  grants.rs  livekit.rs  mod.rs
backend/src/models/: enrollment.rs  mod.rs  recitation.rs  room.rs  session.rs  user.rs
backend/src/qf/: config.rs  content.rs  mod.rs  oauth.rs  pkce.rs  user_api.rs
backend/src/rooms/: mod.rs
backend/src/services/: mod.rs  storage.rs
backend/src/sfu/: media_service.rs  mediasoup_sfu.rs  mod.rs  session.rs  track.rs  webrtc_sfu.rs
docs/: data-fetching.md  (+1 more)
(+217 files in other folders)
