[package]
name = "miqraa-backend"
version = "0.1.0"
edition = "2021"
description = "Al-Miqraa (المقرأ) — Open-source Quran education platform backend"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hamza-ghandouri/miqraa"
homepage = "https://miqraa.org"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# WebRTC SFU
webrtc = "0.12"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# CLI
clap = { version = "4", features = ["derive"] }
